Kubernetes-yaml/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: hashicorp/http-echo
        args:
        - "-text=auth service"
        ports:
        - containerPort: 5670
