Kubernetes-yaml/service-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: demo-app
spec:
  selector:
    app: auth
  ports:
  - port: 80
    targetPort: 5670
