Kubernetes-yaml/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: demo-app
spec:
  selector:
    app: backend
  ports:
  - port: 8088
    targetPort: 5678
