Kubernetes-yaml/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: demo-app
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - port: 8080
    targetPort: 80
