Kubernetes-yaml/ingress-frontend-auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: demo-app
spec:
  rules:
  - host: demo.local
    http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 5670
